<resources>
    <string name="app_name">TSCC</string>
    <string name="welcome_logo">Welcome Logo</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="send">Gửi</string>
    <string name="trash_collection">Trash Collection</string>
    <string name="user_logo">User Logo</string>
    <string name="use_camera">Chụp ảnh</string>
    <string name="use_album">Ảnh từ thư viện</string>
    <string name="help">Hổ trợ</string>
    <string name="type">Type</string>
    <string name="new_request">New request</string>
    <string name="size">Size</string>
    <string name="width">Width</string>
    <string name="location">Location</string>
    <string name="send_request">Gửi yêu cầu</string>
    <string name="app_logo">App logo</string>
    <string name="contact">Contact</string>
    <string name="term_and_condition">Term and condition</string>
    <string name="use_guide">Use guide</string>
    <string name="notification">Notification</string>
    <string name="full_name">Họ tên</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="loading">Đang gửi yêu cầu...</string>
    <string-array name="trashType">
        <item>ORGANIC</item>
        <item>RECYCLE</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="trashWidth">
        <item>SMALL</item>
        <item>NORMAL</item>
        <item>MEDIUM</item>
        <item>BIG</item>
    </string-array>
    <string-array name="trashSize">
        <item>SMALL</item>
        <item>NORMAL</item>
        <item>MEDIUM</item>
        <item>BIG</item>
    </string-array>
</resources>

