<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_space"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".InformationActivity">

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:scaleType="center"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        android:text="@string/trash_collection"
        android:textAlignment="center"
        android:textSize="@dimen/main_text_size"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        android:text="@string/contact"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        android:text="@string/term_and_condition"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        android:text="@string/use_guide"/>


</LinearLayout>